--- a/cocoblockly/package.json
+++ b/cocoblockly/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "buildosx": "electron-packager . --platform=darwin --arch=x64 --overwrite",
+    "buildwin": "export PATH=$PATH:/Users/xcorex/Library/PlayOnMac/wine/darwin-x86/1.9.5-staging/bin/; electron-packager . --platform=win32 --arch=ia32 --overwrite"    
   },
   "author": "",
   "license": "ISC",
