--- a/cocoblockly/package.json
+++ b/cocoblockly/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "buildosx": "electron-packager . --platform=darwin --arch=x64 --overwrite",
-    "buildwin": "export PATH=$PATH:/Users/xcorex/Library/PlayOnMac/wine/darwin-x86/1.9.5-staging/bin/; electron-packager . --platform=win32 --arch=ia32 --overwrite"    
+    "buildosx": "electron-packager . --platform=darwin --arch=x64 --overwrite --ignore=node_modules",
+    "buildwin": "export PATH=$PATH:/Users/xcorex/Library/PlayOnMac/wine/darwin-x86/1.9.5-staging/bin/; electron-packager . --platform=win32 --arch=ia32 --overwrite --ignore=node_modules",    
+    "buildall": "npm run-script buildosx ; npm run-script buildwin "
   },
   "author": "",
   "license": "ISC",
