--- a/cocoblockly/package.json
+++ b/cocoblockly/package.json
@@ -6,13 +6,14 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "buildosx": "electron-packager . --platform=darwin --arch=x64 --overwrite --ignore=node_modules --asar=true",
-    "buildwin": "export PATH=$PATH:/Users/xcorex/Library/PlayOnMac/wine/darwin-x86/1.9.5-staging/bin/; electron-packager . --platform=win32 --arch=ia32 --overwrite --ignore=node_modules --asar=true",    
-    "buildlinux":"electron-packager . cocoblock --platform=linux --arch=ia32 --ignore=node_modules --asar=true --overwrite",
+    "buildwin": "export PATH=$PATH:/Users/xcorex/Library/PlayOnMac/wine/darwin-x86/1.9.5-staging/bin/; electron-packager . --platform=win32 --arch=ia32 --overwrite --ignore=node_modules --asar=true",
+    "buildlinux": "electron-packager . cocoblock --platform=linux --arch=ia32 --ignore=node_modules --asar=true --overwrite",
     "buildall": "npm run-script buildosx ; npm run-script buildwin ;npm run-script buildlinux "
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "electron-json-storage": "^2.0.0"
   },
   "devDependencies": {
     "devtron": "^1.3.0",
