--- a/cocoblockly/package.json
+++ b/cocoblockly/package.json
@@ -13,7 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "electron-json-storage": "^2.0.0"
+    "configstore": "^2.0.0"
   },
   "devDependencies": {
     "devtron": "^1.3.0",
