--- a/.gitignore
+++ b/.gitignore
@@ -108,3 +108,4 @@ package/ardublocklydocs/site
 
 # The electron package needs the build folder (to be changed in the near future)
 !/package/electron/tasks/build/
+/cocoblockly/NeoBlock-darwin-x64
