--- a/cocoblockly/package.json
+++ b/cocoblockly/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cocoblock",
+  "name": "NeoBlock",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "buildosx": "electron-packager . --platform=darwin --arch=x64 --overwrite --asar=true",
     "buildwin": "export PATH=$PATH:/Users/xcorex/Library/PlayOnMac/wine/darwin-x86/1.9.5-staging/bin/; electron-packager . --platform=win32 --arch=ia32 --overwrite --asar=true",
-    "buildlinux": "electron-packager . cocoblock --platform=linux --arch=ia32 --asar=true --overwrite",
+    "buildlinux": "electron-packager . NeoBlock --platform=linux --arch=ia32 --asar=true --overwrite",
     "buildall": "npm run-script buildosx ; npm run-script buildwin ;npm run-script buildlinux "
   },
   "author": "",
