--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-# build 0.0.4
+# build 0.0.7
 # We are using the iOS build system to create Mac OS X python builds
 language: node_js
 node_js:
@@ -18,6 +18,8 @@ cache:
 before_install:
   # OS extra info
   - uname -a
+  - sudo apt-get -qq update
+  - sudo apt-get install -y wine
 
 # Run the tests in both Python 2 and 3
 script:
