--- a/.travis.yml
+++ b/.travis.yml
@@ -37,4 +37,12 @@ deploy:
   skip_cleanup: true
   on:
     tags: true
-    
+  
+deploy:
+  provider: pages
+  local-dir: "cocoblockly"
+  skip-cleanup: true
+  github-token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variable
+  keep-history: true
+  on:
+    branch: dev
