--- a/cocoblockly/package.json
+++ b/cocoblockly/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "buildosx": "electron-packager . --platform=darwin --arch=x64 --overwrite --asar=true",
-    "buildwin": "export PATH=$PATH:/Users/xcorex/Library/PlayOnMac/wine/darwin-x86/1.9.5-staging/bin/; electron-packager . --platform=win32 --arch=ia32 --overwrite --asar=true",
-    "buildlinux": "electron-packager . NeoBlock --platform=linux --arch=ia32 --asar=true --overwrite",
+    "buildosx": "electron-packager ./dist --platform=darwin --arch=x64 --overwrite --asar=true",
+    "buildwin": "export PATH=$PATH:/Users/xcorex/Library/PlayOnMac/wine/darwin-x86/1.9.5-staging/bin/; electron-packager ./dist --platform=win32 --arch=ia32 --overwrite --asar=true",
+    "buildlinux": "electron-packager ./dist NeoBlock --platform=linux --arch=ia32 --asar=true --overwrite",
     "buildall": "npm run-script buildosx ; npm run-script buildwin ;npm run-script buildlinux "
   },
   "author": "",
