--- a/cocoblockly/.gitignore
+++ b/cocoblockly/.gitignore
@@ -1,4 +1,4 @@
 node_modules/*
-NeoBlock-darwin-x64
-NeoBlock-linux-ia32
-NeoBlock-win32-ia32
+NeoBlock-darwin-x64/*
+NeoBlock-linux-ia32/*
+NeoBlock-win32-ia32/*
