--- a/cocoblockly/package.json
+++ b/cocoblockly/package.json
@@ -18,11 +18,12 @@
   "devDependencies": {
     "devtron": "^1.3.0",
     "electron": "^1.8.4",
-    "electron-packager": "^7.7.0",
+    "electron-packager": "^12.0.0",
     "electron-prebuilt": "^1.3.3",
     "electron-reloader": "^0.2.0",
     "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.1",
     "gulp-file-include": "^2.0.1",
-    "gulp-concat": "^2.6.1"
+    "gulp-shell": "^0.6.5"
   }
 }
