disable page deploy

--- a/.travis.yml
+++ b/.travis.yml
@@ -35,12 +35,13 @@ deploy:
   skip_cleanup: true
   on:
     tags: true
-  
-deploy:
-  provider: pages
-  local-dir: "cocoblockly/dist"
-  skip-cleanup: true
-  github-token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variable
-  keep-history: true
-  on:
     branch: dev
+
+#deploy:
+#  provider: pages
+#  local-dir: "cocoblockly/dist"
+#  skip-cleanup: true
+#  github-token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variable
+#  keep-history: true
+#  on:
+#    branch: dev
