add windows, stop release if not tagged

--- a/.travis.yml
+++ b/.travis.yml
@@ -32,6 +32,7 @@ deploy:
     secure: $GITHUB_TOKEN
   file:
     - "cocoblockly/releases/NeoBlock-darwin-x64.tar.gz"
+    - "cocoblockly/releases/NeoBlock-win32-ia32.zip"
   skip_cleanup: true
   on:
     tags: true
